# coil

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/coil/: __init__.py  __main__.py  bootloader.py  builder.py  cli.py  config.py  decompiler.py  doctor.py  inspect.py  obfuscator.py  packager.py  resolver.py  runtime.py  scanner.py  ui.py
src/coil/templates/: bootloader.c  tinfl.h
src/coil/utils/: compat.py  fs.py  gui_frameworks.py  package_map.py  stdlib_list.py  stdlib_strip.py
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_decompiler.py  test_default_excludes.py  test_doctor.py  test_inspect.py  test_packager.py  test_platforms.py  test_pywin32_integration.py  test_resolver.py  test_runtime.py  test_scanner.py  test_sitecustomize_dispatch.py  test_subsystem_integration.py  test_ui.py  test_versioninfo_integration.py  test_windows_subsystem.py  test_windows_versioninfo.py
tests/fixtures/sample_project/: main.py  utils.py
tests/fixtures/subsystem_sample/: coil.toml  console_entry.py  gui_entry.py
tests/fixtures/versioninfo_sample/: With Spaces.py  coil.toml  no_comment.py
