[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coil-compiler"
version = "0.2.1"
description = "A Python-to-executable compiler that just works."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Nathan Curtis"},
]
keywords = ["compiler", "executable", "exe", "packaging", "distribution"]
dependencies = [
    "rich>=13.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pefile>=2023.0",
]

[project.scripts]
coil = "coil.cli:main"

[project.urls]
Homepage = "https://github.com/nathannncurtis/coil"
Repository = "https://github.com/nathannncurtis/coil"
Issues = "https://github.com/nathannncurtis/coil/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
